Edit index.html and recipes/aussie.html recipes/beef_stew.html recipes/potato_salad.html recipes/image.webp

--- a/recipes/aussie.html
+++ b/recipes/aussie.html
@@ -7,7 +7,10 @@
     <title>Aussie Chicken</title>
 </head>
 <body>
-    <h1>Aussie Chicken</h1>
+    <h1>
+        <a href="../index.html">Odin Recipes</a>
+    </h1>
+    <h2>Aussie Chicken</h2>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2F89bf9cec0bfc3b628271e88d7073de8f%2F164384324263351B7E-2434-4ECD-AB6D-73D2F17BCCC7.jpeg&w=1200&h=678&c=sc&poi=face&q=60" alt="" style="height: 60%; width:40%;">
     <h2>Description</h2>
     <p>This recipe includes chicken breasts topped with mushrooms, bacon and cheese cooked in a honey-mustard sauce. </p>
