--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/aussie.html">Aussie Chicken</a>
+    <ul>
+        <li>
+            <a href="recipes/aussie.html">Aussie Chicken</a>
+        </li>
+        <li>
+            <a href="recipes/potato_salad.html">Sweet Potato Salad</a>
+        </li>
+        <li>
+            <a href="recipes/beef_stew.html">Beef Stew</a>
+        </li>
+    </ul>
 </body>
 </html>
