--- a/recipes/potato_salad.html
+++ b/recipes/potato_salad.html
@@ -5,38 +5,65 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sweet Potato Salad</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>
-        <a href="../index.html">Odin Recipes</a>
-    </h1>
-    <h2>Sweet Potato Salad</h2>
-    <img src="https://www.bbcgoodfoodme.com/assets/legacy/recipe_images/recipe-image-legacy-id--1201823_11.jpg" alt="Sweet Potato Salad">
-    <h2>Description</h2>
-    <p>This simple healthy salad of baked potato chunks makes a great alternative to mayonnaise-based
-        versions</p>
-        <h4>Ingredients</h4>
+    <header class="home-header">
+        <h1><a href="../index.html">Odin Recipes</a></h1>
         <ul>
-            <li>1.2kg sweet potatoes, peeled and cut into biggish chunks</li>
-            <li>1 tbsp olive oil</li>
-            <li>2 shallots (or half a small red onion), finely chopped</li>
-            <li>4 spring onions, finely sliced</li>
-            <li>small bunch chives, snipped into quarters or use mini ones</li>
-            <li>5 tbsp sherry vinegar</li>
-            <li>2 tbsp extra-virgin olive oil</li>
-            <li>2 tbsp honey</li>
+            <li>
+                <a href="aussie.html">Aussie Chicken</a>
+            </li>
+            <li>
+                <a href="potato_salad.html">Sweet Potato Salad</a>
+            </li>
+            <li>
+                <a href="beef_stew.html">Beef Stew</a>
+            </li>
         </ul>
-    <h4>Steps</h4>
-    <ol>
-        <li>Heat oven to 200C/180C fan/gas 6. Toss the sweet potato chunks with the olive oil and some
-            seasoning, and spread on a baking parchment-lined baking sheet. Roast for 30 - 35 mins until
-            tender and golden. Cool at room temperature</li>
-            <br>
-        <li>When just about cool whisk together all the dressing ingredients with a little more seasoning
-            and gently toss through the potato chunks – use your hands to avoid breaking them up.</li>
-    </ol>
-    <h5>Tips</h5>
-    <h6>Finishing touches</h6>
-    <p>Scatter with crumbled feta or toasted pine nuts for an extra flash of flavour if you like.</p>
+    </header>
+    <main class="content">
+        <h2>Sweet Potato Salad</h2>
+        <section class="upper">
+            <div class="illustration">
+                <h2>Description</h2>
+                <p>This simple healthy salad of baked potato chunks makes a great alternative to mayonnaise-based
+                    versions</p>
+                <img src="https://www.bbcgoodfoodme.com/assets/legacy/recipe_images/recipe-image-legacy-id--1201823_11.jpg" alt="Sweet Potato Salad">
+            </div>
+       
+            <div class="ingredients">
+                <h2>Ingredients</h2>
+                <ul>
+                    <li>1.2kg sweet potatoes, peeled and cut into biggish chunks</li>
+                    <li>1 tbsp olive oil</li>
+                    <li>2 shallots (or half a small red onion), finely chopped</li>
+                    <li>4 spring onions, finely sliced</li>
+                    <li>small bunch chives, snipped into quarters or use mini ones</li>
+                    <li>5 tbsp sherry vinegar</li>
+                    <li>2 tbsp extra-virgin olive oil</li>
+                    <li>2 tbsp honey</li>
+                </ul>
+            </div>
+        </section>
+        <section class="lower">
+            <h2>Steps</h2>
+        <ol>
+            <li>Heat oven to 200C/180C fan/gas 6. Toss the sweet potato chunks with the olive oil and some
+                seasoning, and spread on a baking parchment-lined baking sheet. Roast for 30 - 35 mins until
+                tender and golden. Cool at room temperature</li>
+                <br>
+            <li>When just about cool whisk together all the dressing ingredients with a little more seasoning
+                and gently toss through the potato chunks – use your hands to avoid breaking them up.</li>
+        </ol>
+            <div class="nutrition">
+            <h4>Tips</h4>
+            <h5>Finishing touches</h5>
+            <p>Scatter with crumbled feta or toasted pine nuts for an extra flash of flavour if you like.</p>
+        </div>
+        </section>
+        
+    </main>
 </body>
+<footer></footer>
 </html>
