--- a/index.html
+++ b/index.html
@@ -5,19 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li>
-            <a href="recipes/aussie.html">Aussie Chicken</a>
-        </li>
-        <li>
-            <a href="recipes/potato_salad.html">Sweet Potato Salad</a>
-        </li>
-        <li>
-            <a href="recipes/beef_stew.html">Beef Stew</a>
-        </li>
-    </ul>
+    <header class="home-header">
+        <h1><a href="#">Odin Recipes</a></h1>
+        <ul>
+            <li>
+                <a href="recipes/aussie.html">Aussie Chicken</a>
+            </li>
+            <li>
+                <a href="recipes/potato_salad.html">Sweet Potato Salad</a>
+            </li>
+            <li>
+                <a href="recipes/beef_stew.html">Beef Stew</a>
+            </li>
+        </ul>
+    </header>
+    <main class="content"></main>
+    <footer></footer>
 </body>
 </html>
