--- a/recipes/aussie.html
+++ b/recipes/aussie.html
@@ -5,47 +5,72 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aussie Chicken</title>
+<link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-    <h1>
-        <a href="../index.html">Odin Recipes</a>
-    </h1>
-    <h2>Aussie Chicken</h2>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2F89bf9cec0bfc3b628271e88d7073de8f%2F164384324263351B7E-2434-4ECD-AB6D-73D2F17BCCC7.jpeg&w=1200&h=678&c=sc&poi=face&q=60" alt="" style="height: 60%; width:40%;">
-    <h2>Description</h2>
-    <p>This recipe includes chicken breasts topped with mushrooms, bacon and cheese cooked in a honey-mustard sauce. </p>
-    <h4>Ingredients</h4>
+    <header class="home-header">
+        <h1><a href="../index.html">Odin Recipes</a></h1>
         <ul>
-            <li>4 skinless, boneless chicken breast halves - pounded to 1/2 inch thickness </li>
-            <li>2 teaspoons seasoning salt </li>
-            <li>6 slices bacon, cut in half </li>
-            <li>½ cup prepared yellow mustard </li>
-            <li>½ cup honey </li>
-            <li>¼ cup light corn syrup </li>
-            <li>¼ cup mayonnaise </li>
-            <li>1 tablespoon dried onion flakes </li>
-            <li>1 tablespoon vegetable oil </li>
-            <li>1 cup sliced fresh mushrooms </li>
-            <li>2 cups shredded Colby-Monterey Jack cheese </li>
-            <li> 2 tablespoons chopped fresh parsley </li>
+            <li>
+                <a href="aussie.html">Aussie Chicken</a>
+            </li>
+            <li>
+                <a href="potato_salad.html">Sweet Potato Salad</a>
+            </li>
+            <li>
+                <a href="beef_stew.html">Beef Stew</a>
+            </li>
         </ul>
-    <h4>Steps</h4>
-        <ol>
-            <li>Rub the chicken breasts with the seasoning salt, cover and refrigerate for 30 minutes.
-            </li>
-            <li>Preheat oven to 350 degrees F (175 degrees C). Place bacon in a large, deep skillet. Cook over medium high heat until crisp. Set aside.
-            </li>
-            <li>In a medium bowl, combine the mustard, honey, corn syrup, mayonnaise and dried onion flakes. Remove half of sauce, cover and refrigerate to serve later.
-            </li>
-            <li>Heat oil in a large skillet over medium heat. Place the breasts in the skillet and saute for 3 to 5 minutes per side, or until browned. Remove from skillet and place the breasts into a 9x13 inch baking dish. Apply the honey mustard sauce to each breast, then layer each breast with mushrooms and bacon. Sprinkle top with shredded cheese.
-            </li>
-            <li>Bake in preheated oven for 15 minutes, or until cheese is melted and chicken juices run clear. Garnish with parsley and serve with the reserved honey mustard sauce.
-            </li>
-        </ol>
-    <h4>Nutritional Facts</h4>
-        <p>
-            <strong>Per Serving:</strong>
-            813 calories; protein 47.2g; carbohydrates 57.1g; fat 46.1g; cholesterol 152.8mg; sodium 1806.8mg.
-            </p>
+    </header>
+    <main class="content">
+        <h1>Aussie Chicken</h1>
+        <section class="upper">
+            <div class="illustration">
+                <h2>Description</h2>
+                <p>This recipe includes chicken breasts topped with mushrooms, bacon and cheese cooked in a honey-mustard sauce. </p>
+                <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2F89bf9cec0bfc3b628271e88d7073de8f%2F164384324263351B7E-2434-4ECD-AB6D-73D2F17BCCC7.jpeg&w=1200&h=678&c=sc&poi=face&q=60" alt="" style="height: 60%; width:40%;">
+            </div>
+            <div class="ingredients">
+                <h2>Ingredients</h2>
+                <ul>
+                    <li>4 skinless, boneless chicken breast halves - pounded to 1/2 inch thickness </li>
+                    <li>2 teaspoons seasoning salt </li>
+                    <li>6 slices bacon, cut in half </li>
+                    <li>½ cup prepared yellow mustard </li>
+                    <li>½ cup honey </li>
+                    <li>¼ cup light corn syrup </li>
+                    <li>¼ cup mayonnaise </li>
+                    <li>1 tablespoon dried onion flakes </li>
+                    <li>1 tablespoon vegetable oil </li>
+                    <li>1 cup sliced fresh mushrooms </li>
+                    <li>2 cups shredded Colby-Monterey Jack cheese </li>
+                    <li> 2 tablespoons chopped fresh parsley </li>
+                </ul>
+            </div>
+        </section>
+        <section class="lower">
+            <h2>Steps</h2>
+            <ol>
+                <li>Rub the chicken breasts with the seasoning salt, cover and refrigerate for 30 minutes.
+                </li>
+                <li>Preheat oven to 350 degrees F (175 degrees C). Place bacon in a large, deep skillet. Cook over medium high heat until crisp. Set aside.
+                </li>
+                <li>In a medium bowl, combine the mustard, honey, corn syrup, mayonnaise and dried onion flakes. Remove half of sauce, cover and refrigerate to serve later.
+                </li>
+                <li>Heat oil in a large skillet over medium heat. Place the breasts in the skillet and saute for 3 to 5 minutes per side, or until browned. Remove from skillet and place the breasts into a 9x13 inch baking dish. Apply the honey mustard sauce to each breast, then layer each breast with mushrooms and bacon. Sprinkle top with shredded cheese.
+                </li>
+                <li>Bake in preheated oven for 15 minutes, or until cheese is melted and chicken juices run clear. Garnish with parsley and serve with the reserved honey mustard sauce.
+                </li>
+            </ol>
+            <div class="nutrition">
+                <h4>Nutritional Facts</h4>
+                <p>
+                    <strong>Per Serving:</strong>
+                    813 calories; protein 47.2g; carbohydrates 57.1g; fat 46.1g; cholesterol 152.8mg; sodium 1806.8mg.
+                </p>
+            </div>
+        </section>
+    </main>
 </body>
+<footer></footer>
 </html>
