@This is the continuation of Odin-recipes project. A few modifications using css are added to the previous html basicwebsite as part of The Odin Prooject.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
             </li>
         </ul>
     </header>
-    <main class="content"></main>
-    <footer></footer>
+    <main class="content home"></main>
+    <footer>
+        <p>Coded by <a href="#">Daniel</a></p>
+        <ul>
+            <li><a href="#">Terms & Conditions</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
