--- a/recipes/beef_stew.html
+++ b/recipes/beef_stew.html
@@ -80,5 +80,11 @@
     </section>
     </main>
 </body>
-<footer></footer>
+<footer>
+    <p>Coded by <a href="#">Daniel</a></p>
+    <ul>
+        <li><a href="#">Terms & Conditions</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+    </ul>
+</footer>
 </html>
