--- a/recipes/potato_salad.html
+++ b/recipes/potato_salad.html
@@ -65,5 +65,11 @@
         
     </main>
 </body>
-<footer></footer>
+<footer>
+    <p>Coded by <a href="#">Daniel</a></p>
+    <ul>
+        <li><a href="#">Terms & Conditions</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+    </ul>
+</footer>
 </html>
