--- a/recipes/aussie.html
+++ b/recipes/aussie.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aussie Chicken</title>
-<link rel="stylesheet" href="/styles.css">
+<link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <header class="home-header">
@@ -72,5 +72,11 @@
         </section>
     </main>
 </body>
-<footer></footer>
+<footer>
+    <p>Coded by <a href="#">Daniel</a></p>
+    <ul>
+        <li><a href="#">Terms & Conditions</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+    </ul>
+</footer>
 </html>
